--- a/templates/index.html
+++ b/templates/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>🚀 DevOps Pipeline Demo</h1>
+        <h1>DevOps Pipeline Demo</h1>
         <p><label>Status:</label> CI/CD Pipeline Working</p>
         <p><label>Deployed On:</label> AWS App Runner</p>
         <p><label>Image Source:</label> DockerHub / ECR</p>
