--- a/templates/index.html
+++ b/templates/index.html
@@ -43,7 +43,7 @@
 </head>
 <body>
   <div class="container">
-    <h1>Hello from DevOps POC </h1>
+    <h1>Hello from DevOps POC 11th July</h1>
     <p><span class="label">Framework:</span> Python Flask</p>
     <p><span class="label">Deployed via:</span> GitHub Actions CI/CD</p>
     <p><span class="label">Hosted on:</span> AWS App Runner</p>
